@@ -1,3 +1,7 @@
+2017-02-23  U-FS-PC-WIN10\cemiu  <cemiu@FS-PC-win10>
+
+	* 1_install.zsh: efi boot
+
 2016-11-06  U-FS-PC-WIN10\cemiu  <cemiu@FS-PC-win10>
 
 	* 1_install.zsh: パーティション番号修正
